# pyTRLCConverter

./: .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  template_usage.md
.github/workflows/: deploy.yml  test.yml
coding-guidelines/: README.md  code-review-checklist.md
doc/: README.md
doc/architecture/: class_diagram.puml  context_diagram.puml  create_test_report.puml  sequence_diagram.puml  use_cases.puml
doc/configuration/: tracing.puml
doc/detailed-design/: conf.py  update_doc_from_src.py
doc/models/: generic.rsl  sw_req.rsl  sw_test.rsl
doc/sw-requirements/: sw_req.trlc
doc/sw-test/: sw_test.trlc
examples/: README.md
examples/plantuml/: README.md  diagram.puml  generate_to_markdown.bat  generate_to_markdown.sh  req.py  req.rsl  req.trlc
examples/simple_req/: README.md  generate_to_markdown.bat  generate_to_markdown.sh
examples/simple_req_multi/: README.md  generate_to_markdown.bat  generate_to_markdown.sh
examples/simple_req_multi_single_out/: README.md  generate_to_markdown.bat  generate_to_markdown.sh
examples/simple_req_proj_spec/: README.md  generate_to_markdown.bat  generate_to_markdown.sh  req.py
examples/simple_req_translation/: README.md  generate_to_markdown.bat  generate_to_markdown.sh  translation.json
src/pyTRLCConverter/: __init__.py  __main__.py  abstract_converter.py  base_converter.py  docx_converter.py  dump_converter.py  iconverter.py  item_walker.py  log_verbose.py  logger.py  markdown_converter.py  plantuml.py  ret.py  rst_converter.py  translator.py  trlc_helper.py  version.py
src/template_python/: template_python.py  version.py
tests/: test_cli.py  test_docx.py  test_dump.py  test_example.py  test_general.py  test_markdown.py  test_plantuml.py  test_rst.py
tests/utils/: psc_do_nothing.py  psc_simple.py  template.docx  translation.json
tools/: README.md
tools/ProjectConverter/: README.md  generic_rsl_docx_converter.py  generic_rsl_markdown_converter.py  generic_rsl_rst_converter.py  image_processing.py  project_converter_class_diagram.puml  req2docx.py  req2markdown.py  req2rst.py  tc2markdown.py  tc2rst.py  translation.json
tools/createTestReport/: README.md  create_test_report.bat  create_test_report.py  create_test_report.sh  create_test_report_in_markdown.py  create_test_report_in_rst.py  test_result_xml2trlc.py
tools/lobster/: README.md  create_tracing_online_report.bat  create_tracing_online_report.sh  create_tracing_report.bat  create_tracing_report.sh  lobster-report-sw-req.conf  lobster-report-sw-test.conf  lobster-sw-test.conf  lobster-trlc-sw-req.conf  lobster-trlc-sw-req.yaml  lobster-trlc-sw-test.conf  lobster-trlc-sw-test.yaml  lobster.conf  tracing_toolchain.puml
tools/plantuml/: README.md  get_plantuml.bat  get_plantuml.sh
tools/req2docx/: ACME.docx  README.md  custom_docx.py  req2docx.bat  req2docx.sh  template.docx
tools/req2markdown/: README.md  req2markdown.bat  req2markdown.py  req2markdown.sh
tools/req2rst/: README.md  req2rst.bat  req2rst.sh
tools/sphinx/: README.md
tools/sphinx/source/: conf.py  coverage_resport.rst  index.rst  license_include.rst  sw_requirements.rst  sw_test_result_report.rst  sw_tests.rst  (+3 more)
tools/tc2markdown/: README.md  tc2markdown.bat  tc2markdown.py  tc2markdown.sh
tools/tc2rst/: README.md  tc2rst.bat  tc2rst.sh
tools/test2markdown/: README.md  test2markdown.bat  test2markdown.py  test2markdown.sh
tools/test_report/: .report.json  execute_tests_with_report.sh
trlc/model/: abs-req.rsl
trlc/swe-req/: swe-req.trlc
trlc/swe-test/: swe-test.trlc
(+1 files in other folders)
