[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTRLCConverter"
version = "1.0.0"
description = "Supports the conversion from TRLC files to other formats."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Andreas Merkle", email = "andreas.merkle@newtec.de" }
]
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "toml>=0.10.2",
    "trlc @ https://github.com/NewTec-GmbH/trlc/archive/refs/heads/main.zip"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/NewTec-GmbH/pyTRLCConverter"
repository = "https://github.com/NewTec-GmbH/pyTRLCConverter"
tracker = "https://github.com/NewTec-GmbH/pyTRLCConverter/issues"

[project.scripts]
pyTRLCConverter = "pyTRLCConverter.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
pyTRLCConverter = ["pyproject.toml"]
